[project]
name = "process-street"
version = "2025.0"
description = "Work with the Process Street API"
readme = "README.md"
authors = [
    { name = "William Jackson", email = "william@subtlecoolness.com" }
]
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "httpx>=0.28.1",
]

[project.urls]
"Homepage" = "https://github.com/williamjacksn/process-street-api"
"Issues" = "https://github.com/williamjacksn/process-street-api/issues"

[build-system]
requires = ["uv-build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.12.12",
    "uv-build>=0.8.15",
]
test = [
    "coverage>=7.8.2",
    "dotenv>=0.9.9",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
